--- a/mukanren/Makefile
+++ b/mukanren/Makefile
@@ -5,3 +5,7 @@ main:
 test:
 	ocamlbuild -I src -use-ocamlfind mukanren.byte test.byte -tag thread
 	./test.byte
+
+clean:
+	rm -r test.byte
+	rm -r mukanren.byte
